--- a/app/views/result_sheets/new.html.erb
+++ b/app/views/result_sheets/new.html.erb
@@ -1,19 +1,17 @@
 <div class="container">
   <h5 class="card-title">New Result Sheet</h5>
-  <form>
-    <%= form_for @result_sheet, method: :post do |f|%>
-      <div class="form-group">
-        <%= f.label :doctor %>
-        <%= f.text_field :doctor, class: 'form-control', placeholder: 'Doctor Name'%>
-      </div>
+  <%= form_with(model: @result_sheet, local: true) do |f|%>
+    <div class="form-group">
+      <%= f.label :doctor %>
+      <%= f.text_field :doctor, class: 'form-control', placeholder: 'Doctor Name'%>
+    </div>
 
-      <div class="form-group">
-        <div class="custom-file">
-          <%= f.file_field :document, class: 'custom-file-input'%>
-          <%= f.label :document, class: 'custom-file-label'%>
-        </div>
+    <div class="form-group">
+      <div class="custom-file">
+        <%= f.file_field :document, required: true, class: 'custom-file-input'%>
+        <%= f.label :document, class: 'custom-file-label'%>
       </div>
-      <%= f.submit 'Create', class:'btn btn-primary' %>
-    <% end %>
-  </form>
+    </div>
+    <%= f.submit 'Create', class:'btn btn-primary' %>
+  <% end %>
 </div>
