--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,9 @@
 <div class='container'>
-  <% if current_user && @last_result_sheet %>
-    <h5 class="card-title">Result Sheet <%=@last_result_sheet&.date%></h5>
-    <h5 class="card-subtitle mb-2 text-muted"><%=@last_result_sheet.doctor%></h5>
-    <% @last_result_sheet.studies.each do |study| %>
-      <h6 class="card-subtitle mb-2 text-muted"><%= study.name %></h6>
-    <% end if @last_result_sheet.studies %>
+  <% if current_user && @general_studies %>
+    <h5 class="card-title">General Results </h5>
+    <% names_uniq(@general_studies).each do |study_name|%>
+      <%= link_to study_name, studies_path(study_name: study_name) %><hr>
+    <% end %>
   <% else %>
     <h2>Hacer bonito esto :v</h2>
     <h2>What's Health Plotter?</h2>
