--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
-<div class='container'>
+<div class='container is-widescreen '>
   <% if current_user && @general_studies %>
-    <h5 class="card-title">General Results </h5>
+    <p class="title is-3">General Results </p>
     <% names_uniq(@general_studies).each do |study_name|%>
       <%= link_to study_name, studies_path(study_name: study_name) %><hr>
     <% end %>
   <% else %>
-    <h2>Hacer bonito esto :v</h2>
-    <h2>What's Health Plotter?</h2>
-    <h2>Objetive </h2>
+    <p>Hacer bonito esto :v</p>
+    <p>What's Health Plotter?</p>
+    <p>Objetive </p>
   <% end %>
 </div>
