--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,29 @@
-<div class="container w-50">
-  <h2 class="card-title text-center">Sign up</h2>
+<div class="container is-widescreen ">
+  <p class="title is-3 text-center font-weight-light text-info">Sign up</p>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="form-group">
+    <div class="field">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input' %>
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'input' %>
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: 'form-control' %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: 'input' %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up", class: 'btn btn-primary w-100' %>
+      <%= f.submit "Sign up", class: 'button is-primary is-fullwidth' %>
     </div>
   <% end %>
 
