--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="pt-4 my-md-5 border-top">
     <div class="row">
       <div class="col-6 col-md text-center">
-        <h5>Health Plotter</h5>
+        <p>Health Plotter</p>
       </div>
     </div>
   </footer>
