--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>HealthPlotter</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= favicon_link_tag 'logo.png' %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,20 +14,16 @@
     <%= render 'layouts/header' %>
     
     <% if notice %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <div class="notification is-primary">
+        <button class="delete"></button>
         <%= notice %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
     <% end %>
 
     <% if alert %>
-      <div class="alert alert-alert alert-dismissible fade show" role="alert">
+      <div class="notification is-danger">
+        <button class="delete"></button>
         <%= alert %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
     <% end %>
 
