--- a/app/views/result_sheets/show.html.erb
+++ b/app/views/result_sheets/show.html.erb
@@ -1,8 +1,28 @@
-<div class="container">
-  <h5 class="card-title">Result Sheet <%=@result_sheet.date%></h5>
-  <% @result_sheet.studies.each do |study| %>
-    <h6 class="card-subtitle mb-2 text-muted"><%= study.name %></h6><span><%= study.result %></span><hr>
-  <% end if @result_sheet.studies %>
+<div class="container is-widescreen ">
+  <p class="title is-3">Result Sheet <%=@result_sheet.date%></p>
+
+  <table class="table is-fullwidth is-striped is-narrow is-hoverable">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Result</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @result_sheet.studies.each do |study| %>
+        <tr>
+          <td><%= study.name %></td>
+          <td class='has-text-danger'><%= study.result %></td>
+          <td>
+            <%= link_to 'Edit', edit_study_path(study), class: 'button is-primary' %>
+            <%= link_to 'delete', study_path(study), method: :delete, class: 'button is-danger' %>
+          </td>
+        </tr>
+      <% end if @result_sheet.studies %>
+    </tbody>
+  </table>
+
     <%= column_chart @result_sheet.studies.map { |sheet|
     {name: sheet.name, data: { result: sheet.result }}
     } %>
