--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,4 +1,21 @@
-<div class='container'>
-    <h5 class="card-title">Results for <%=@studies.first.name%></h5>
+<div class='container is-widescreen '>
+    <p class="title is-3">Results for <%=@studies.first.name%></p>
     <%= line_chart results(@studies), download: {filename: "#{@studies.first.name}", background: "#ffffff"} %>
+
+  <table class="table is-fullwidth is-striped is-narrow is-hoverable">
+    <thead>
+      <tr>
+        <th scope="col">Date</th>
+        <th scope="col">Result</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @studies.each do |study| %>
+        <tr>
+          <td><%= study.result_sheet.date %></td>
+          <td class='has-text-danger'><%= study.result %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
