--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="pt-4 my-md-5 border-top">
-    <div class="row">
-      <div class="col-6 col-md text-center">
-        <p>Health Plotter</p>
-      </div>
-    </div>
-  </footer>
+<footer class="footer is-fullhd">
+  <div class="content has-text-centered">
+    <p class='custom-text'>
+      <strong>Health Plotter</strong> 
+    </p>
+  </div>
+</footer>
