--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,31 @@
  *= require_tree .
  *= require_self
  */
+ @import "bulma";
+ @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+ $green-first: #A3E4D7;
+ $blue-custom: #0356DD;
+ 
+ body {
+  font-family: 'Open Sans', sans-serif;
+ }
+
+.header-icon {
+  width: 25%;
+}
+
+.custom-color{
+  background: $green-first;
+
+}
+
+.custom-container-welcome {
+  margin-bottom: 18em;
+  margin-top: 18em;
+  margin-left: 2em;
+}
+
+.container-margin {
+  margin: 5em;
+}
