--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,34 @@
+
 <header>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <%= link_to 'Health Plotter', root_path %>
-    </div>
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <% if current_user %>
+  <% if current_user %>
+    <nav class="navbar  has-background-light" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <p class='has-text-white'><%= link_to 'Health Plotter', root_path, class: 'is-size-3'%></p>
+      </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
           <nav class="navbar-item">
             <%= link_to 'Result Sheets', result_sheets_path %>
           </nav>
-        <% end %>
+          </div>
         </div>
-      </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <% if current_user%>
-              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'button is-danger is-outlined'%>
-            <% else %>
-              <%= link_to 'Sign up', new_user_registration_path, class: 'button is-primary'%>
-              <%= link_to 'Sign in', new_user_session_path, class: 'button is-light'%>
-            <% end %>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'button is-danger is-outlined is-rounded'%>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  <% else %>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <figure class="image is-64x64">
+            <%= link_to image_tag('logo.png'), new_user_session_path %>
+          </figure>
+        </div>
+      </nav>
+  <% end %>
 </header>
+ 
