--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,15 @@
     <%= csp_meta_tag %>
     <%= favicon_link_tag 'logo.png' %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= render 'layouts/header' %>
     
     <% if notice %>
-      <div class="notification is-primary">
+      <div class="notification is-link">
         <button class="delete"></button>
         <%= notice %>
       </div>
@@ -28,6 +28,6 @@
     <% end %>
 
     <%= yield %>
-    <%#= render 'layouts/footer' %>
+    <%= render 'layouts/footer' if current_user%>
   </body>
 </html>
