--- a/app/views/result_sheets/index.html.erb
+++ b/app/views/result_sheets/index.html.erb
@@ -1,6 +1,6 @@
 
-<div class="container is-widescreen ">
-  <p class="title is-3">Result Sheets</p>
+<div class="container container-margin ">
+  <p class="title is-3 has-text-link">Result Sheets</p>
 
   <table class="table is-fullwidth is-striped is-narrow is-hoverable">
     <thead>
@@ -18,7 +18,7 @@
           <td><%= sheet.date %></td>
           <td><%= sheet.doctor %></td>
           <td>
-            <%= link_to 'Show' , result_sheet_path(sheet), class: 'button is-primary' %>
+            <%= link_to 'Show' , result_sheet_path(sheet), class: 'button is-link' %>
             <%= link_to 'Delete', result_sheet_path(sheet), method: :delete, class: 'button is-danger' %>
           </td>
         </tr>
@@ -26,6 +26,6 @@
     </tbody>
   </table>
 
-  <%= link_to 'New', new_result_sheet_path, class: 'button is-primary' %>
+  <%= link_to 'New', new_result_sheet_path, class: 'button is-link' %>
 
 </div>
