--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,6 +1,9 @@
-<div class='container is-widescreen '>
-    <p class="title is-3">Results for <%=@studies.first.name%></p>
-    <%= line_chart results(@studies), download: {filename: "#{@studies.first.name}", background: "#ffffff"} %>
+<div class='container container-margin '>
+    <p class="title is-3"><%=@studies.first.name.capitalize%> Results
+      <%= link_to 'Back', :back, class: 'button is-danger is-outlined'%>
+    </p>
+    
+    <%= area_chart results(@studies), download: {filename: "#{@studies.first.name}", background: "#ffffff"}, title: "#{@studies.first.name.capitalize} results" %>
 
   <table class="table is-fullwidth is-striped is-narrow is-hoverable">
     <thead>
