--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
 <div class="container ">
+  <figure class="image is-64x64">
+    <%= link_to image_tag('logo.png'), root_path %>
+  </figure>
   <div class='container-margin'>
     <p class="title is-3 text-center font-weight-light  has-text-link">Sign up</p>
 
