--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,34 +1,27 @@
 
 <header>
-  <% if current_user %>
-    <nav class="navbar  has-background-light" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <p class='has-text-white'><%= link_to 'Health Plotter', root_path, class: 'is-size-3'%></p>
-      </div>
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <nav class="navbar-item">
-            <%= link_to 'Result Sheets', result_sheets_path %>
-          </nav>
+  <nav class="navbar  has-background-light" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <p class='has-text-white'><%= link_to image_tag('logo-name.png',class: 'header-icon'), root_path %></p>
+    </div>
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <%= link_to image_tag('loupe.svg'), root_path, class: 'image is-32x32'%>
+        </div>
+        <div class="navbar-item">
+          <%= link_to image_tag('cloud-computing.svg'), new_result_sheet_path	, class: 'image is-32x32'%>
+        </div>
+        <div class="navbar-item">
+          <%= link_to image_tag('results.svg'), result_sheets_path, class: 'image is-32x32'%>
+        </div>
+        <div class="navbar-item">
+          <div class="buttons">
+            <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'button is-danger is-outlined is-rounded'%>
           </div>
         </div>
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'button is-danger is-outlined is-rounded'%>
-            </div>
-          </div>
-        </div>
       </div>
-    </nav>
-  <% else %>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <figure class="image is-64x64">
-            <%= link_to image_tag('logo.png'), new_user_session_path %>
-          </figure>
-        </div>
-      </nav>
-  <% end %>
+    </div>
+  </nav>
 </header>
  
