--- a/app/views/result_sheets/new.html.erb
+++ b/app/views/result_sheets/new.html.erb
@@ -5,6 +5,12 @@
       <%= f.label :doctor %>
       <%= f.text_field :doctor, class: 'input is-link is-rounded', placeholder: 'Doctor Name'%>
     </div>
+
+    <div class="field">
+      <%= f.label :date %>
+      <%= f.date_field :date, class: 'input is-link is-rounded', placeholder: 'Date'%>
+    </div>
+
     <div class="field">
       <%= f.label :document %>
       <%= f.file_field :document, required: true, class: 'is-right is-link box button'%>
