--- a/app/views/result_sheets/show.html.erb
+++ b/app/views/result_sheets/show.html.erb
@@ -1,7 +1,6 @@
 <div class="container container-margin ">
-  <p class="title is-3 has-text-link">Result Sheet <%=@result_sheet.date%>
-    <%= link_to 'Back', :back, class: 'button is-danger is-outlined'%>
-  </p>
+  <%= link_to 'Back', :back, class: 'button is-danger is-outlined'%><br></br>
+  <p class="title is-3 has-text-link">Result Sheet <%=@result_sheet.date%></p>
 
   <table class="table is-fullwidth is-striped is-narrow is-hoverable">
     <thead>
@@ -24,8 +23,4 @@
       <% end if @result_sheet.studies %>
     </tbody>
   </table>
-
-    <%= column_chart @result_sheet.studies.map { |sheet|
-    {name: sheet.name, data: { result: sheet.result }}
-    } %>
 <div>
