--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,9 +1,8 @@
 <div class='container container-margin '>
-    <p class="title is-3"><%=@studies.first.name.capitalize%> Results
-      <%= link_to 'Back', :back, class: 'button is-danger is-outlined'%>
-    </p>
+  <%= link_to 'Back', :back, class: 'button is-danger is-outlined'%> <br></br>
+  <p class="title is-3 has-text-link"><%=@studies.first.name.capitalize%> Results</p>
     
-    <%= area_chart results(@studies), download: {filename: "#{@studies.first.name}", background: "#ffffff"}, title: "#{@studies.first.name.capitalize} results" %>
+  <%= area_chart results(@studies), download: {filename: "#{@studies.first.name}", background: "#ffffff"}, title: "#{@studies.first.name.capitalize} results" %>
 
   <table class="table is-fullwidth is-striped is-narrow is-hoverable">
     <thead>
