--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,4 @@
         %button.delete
         = alert
     = yield
-    = render 'layouts/footer' if current_user
+    -# = render 'layouts/footer' if current_user
