--- a/app/views/result_sheets/new.html.haml
+++ b/app/views/result_sheets/new.html.haml
@@ -9,5 +9,5 @@
       = f.date_field :date, class: 'input is-link is-rounded', placeholder: 'Date'
     .field
       = f.label :document
-      = f.file_field :document, required: true, class: 'is-right is-link box button'
-    = f.submit 'Create', class:'button is-link'
+      = f.file_field :document, required: true, class: 'is-right is-link box'
+    = f.submit 'Create', class:'button is-rounded is-link'
