--- a/app/views/studies/edit.html.haml
+++ b/app/views/studies/edit.html.haml
@@ -13,4 +13,4 @@
       = f.label :unit, class: 'label'
       .control
         = f.text_field :unit, class: 'input is-link is-rounded', placeholder: 'unit'
-    = f.submit 'Save', class:'button is-link'
+    = f.submit 'Save', class:'button is-rounded is-link'
