--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,9 +28,12 @@
 }
 
 .custom-container-welcome {
-  margin-bottom: 18em;
-  margin-top: 18em;
+  margin-bottom: 25em;
+  margin-top: 8em;
   margin-left: 2em;
+}
+.custom-container-images {
+  margin-bottom: 10em;
 }
 
 .container-margin {
@@ -42,3 +45,6 @@
   border-radius: 2em;
 }
 
+.custom-search {
+  margin-top: 5px;
+}
